# openaleph-search

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  highlighting.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: build-elastic.yml  python.yml  upgrade.yml
contrib/: cleanup_cross_bucket_duplicates.py
docs/: aggregations.md  annotations.md  facets.md  highlighting.md  index.md  indexes.md  matching.md  mentions.md  more_like_this.md  parser.md  percolation.md  significant_terms.md  synonyms.md
docs/overrides/partials/: copyright.html  logo.html
docs/reference/: authorization.md  cli.md  mapping.md  parser.md  settings.md
openaleph_search/: __init__.py  cli.py  core.py  mapping.py  model.py  settings.py  transform.py  util.py
openaleph_search/index/: __init__.py  admin.py  debug.py  entities.py  export.py  indexer.py  indexes.py  mapping.py  percolator.py  util.py  xref.py
openaleph_search/parse/: parser.py
openaleph_search/query/: base.py  highlight.py  matching.py  mentions.py  more_like_this.py  queries.py  util.py
openaleph_search/search/: __init__.py  facet.py  logic.py  matching.py  parser.py  query.py  result.py  utils.py
openaleph_search/transform/: entity.py  util.py
tests/: conftest.py  test_aleph_collection.py  test_analyzer.py  test_configure_index.py  test_export.py  test_highlighting.py  test_indexer.py  test_mapping.py  test_matching.py  test_mentions.py  test_more_like_this.py  test_multi_mentions.py  test_pages.py  test_percolator.py  test_routing.py  test_search.py  test_search_auth.py  test_search_parser.py  test_search_query.py  test_xref.py
tests/fixtures/: pages.jsonl  person_name_synonyms.txt
