[project]
name = "openaleph-search"
version = "5.2.2"
description = "OpenAleph index & search module"
authors = [
    { name = "OCCRP Data Team", email = "data@occrp.org" },
    { name = "Friedrich Lindenberg", email = "friedrich@pudo.org"},
    { name = "Simon Wörpel", email = "simon.woerpel@pm.me" },
    { name = "Data and Research Center – DARC", email = "hi@dataresearchcenter.org" },
]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "ftmq (>=4.8.0,<5.0.0)",
    "followthemoney (<4.8.1)",
    "rigour (>=1.7.5,<2.0.0)",
    "elasticsearch (>=9.2.0,<10.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "cachetools (<6)",
]


[project.scripts]
openaleph-search = "openaleph_search.cli:cli"

[project.urls]
Homepage = "https://openaleph.org/docs/lib/openaleph-search"
Documentation = "https://openaleph.org/docs/lib/openaleph-search"
Repository = "https://github.com/openaleph/openaleph-search"
Issues = "https://github.com/openaleph/openaleph-search/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=7.1.0,<8.0"
pytest-env = "^1.1.1"
isort = "^8.0.1"
black = ">=26.3.1,<27.0"
mypy = "^1.17.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
mkdocs = "^1.6.1"
mkdocstrings-python = "^2.0.3"
mkdocs-autorefs = "^1.4.1"
mkdocs-click = "^0.9.0"
jupyterlab = "^4.4.5"
mkdocs-typer2 = "^0.2.1"
griffe = "<2"
zensical = "^0.0.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
OPENALEPH_SEARCH_INDEX_PREFIX = "openaleph-search-pytest"
OPENALEPH_SEARCH_INDEX_NAMESPACE_IDS = 0
OPENALEPH_SEARCH_SIGNIFICANT_TERMS_RANDOM_SAMPLER = 0
OPENALEPH_SEARCH_MLT_MIN_WORD_LENGTH = 3
OPENALEPH_SEARCH_MLT_MIN_DOC_FREQ = 1
OPENALEPH_SEARCH_MLT_MIN_TERM_FREQ = 1
OPENALEPH_SEARCH_MATCH_NAME_PARTS = 1
OPENALEPH_SEARCH_MATCH_PHONETIC = 1
OPENALEPH_SEARCH_MATCH_SYMBOLS = 1
OPENALEPH_SEARCH_PERCOLATION = 1
OPENALEPH_SEARCH_MATCHING_SINGLE_TOKEN_MIN_LENGTH = 7
